--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
+@font-face {
+  font-family: "Manrope";
+  src: local("Manrope-Regular"), local("Manrope-Medium"),
+    local("Manrope-SemiBold"),
+    url("./fonts/Manrope-Regular.ttf") format("truetype"),
+    url("./fonts/Manrope-Medium.ttf") format("truetype"),
+    url("./fonts/Manrope-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat-Regular"), local("Montserrat-SemiBold"),
+    url("./fonts/Montserrat-Regular.ttf") format("truetype"),
+    url("./fonts/Montserrat-SemiBold.ttf") format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Manrope', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: rgba(18, 20, 23, 0.5);
+}
+section {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
+  color: #121417;
 }
+
+p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  font-family: inherit;
+}
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
+
